--- a/src/main/resources/view/dang_nhap.fxml
+++ b/src/main/resources/view/dang_nhap.fxml
@@ -23,7 +23,7 @@
          <children>
             <ImageView fitHeight="461.0" fitWidth="575.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/images.png" />
+                  <Image url="@image/logo.png" />
                </image>
                <VBox.margin>
                   <Insets bottom="40.0" />
